Fix contrast color

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,7 +62,7 @@ aside h2 {
     position: absolute;
     top: 30px;
     left: 135px;
-    color: #fff;
+    color: #000;
 }
 
 aside img {
